k8s/api/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortner-deployment
  namespace: url-shortner
  labels:
    app: url-shortner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortner
  template:
    metadata:
      labels:
        app: url-shortner
    spec:
      containers:
        - name: url-shortner
          image: iameaszy/url-shortner:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 150m
              memory: 500Mi
          ports:
            - containerPort: 3000
              name: backend-http
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
