k8s/api/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortner-service
  namespace: url-shortner
spec:
  selector:
    app: url-shortner
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
